manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starlight-automatic-overview-pages
  namespace: starlight-automatic-overview-pages
  annotations:
    cert-manager.io/issuer: acme-issuer
spec:
  selector:
    app: starlight-automatic-overview-pages
  ports:
    - name: http
      port: 80
