manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starlight-automatic-overview-pages
  namespace: starlight-automatic-overview-pages
spec:
  rules:
    - host: starlight-automatic-overview-pages.trueberryless.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: starlight-automatic-overview-pages
                port:
                  number: 80

  tls:
    - hosts:
        - starlight-automatic-overview-pages.trueberryless.org
      secretName: starlight-automatic-overview-pages
